# nvim

./: .gitignore  .gitmodules  .luarc.json  TODO.md  async_tutorial.lua  coc-settings.json  hacking_pylance.md  highlight_note.md  init.lua  job_util.lua  lazy-lock.json  minimal_init.lua  notes.md  removed_plugins.md  treesitter_note.md  vimrc
after/ftplugin/: cpp.lua  lazy.lua  lua.lua  man.lua  python.lua  qf.lua  tex.lua
colors/: solarized.lua
contrib/: my_lsp_handler.lua
lua/contrib/: check_parens.lua  cmp_config_yaml.lua  deprecated.lua  dump_term_color.lua  gps_hack.lua  indent.lua  lsp_utils.lua  my_better_substitute.lua  my_diagnostic.lua  my_document_highlight.lua  my_lsp_handler.lua  my_peek_registers.lua  my_sub_word.lua  parse_remote_path.lua  pig.lua  print_to_buf.lua  profile.lua  pylance_installer.lua  reload_plugin.lua  show_diagnostic_in_message.lua  statusline.lua  telescope_custom_pickers.lua  winbar.lua
lua/core/: autocmds.lua  clipboard.lua  default_config.lua  gui.lua  keymap.lua  lazy.lua  mappings.lua  mylazy.lua  options.lua  utils.lua
lua/custom/: autocmd.lua  chadrc.lua  deprecated.lua  init.lua  lsp_utils.lua  plugins.lua  utils.lua
lua/plugins/: alpha.lua  bufferline.lua  catppuccin.lua  cmp.lua  coc.lua  dap.lua  edgy.lua  feline.lua  floaterm.lua  fzf.lua  fzf_vim.lua  gitsigns.lua  init.lua  lspconfig.lua  lspsaga.lua  lualine.lua  mason.lua  (+13 more)
plugin/: editBinary.vim  qf_refactor.vim  redir.vim  scriptease.vim  vsearch.vim
snippets/: all.lua  lua.lua  my_print.lua  python.lua
template/: CMakeLists.txt  debug.py  nvim_temp.lua
(+108 files in other folders)
